--- a/client/main.css
+++ b/client/main.css
@@ -97,7 +97,7 @@ nav button {
 .splash {
     width: 100%;
     text-align: center;
-    padding-top: 150px;
+    padding: 150px 0px;
 }
 
 .splash p {
@@ -131,11 +131,18 @@ nav button {
     gap: 20px;
 }
 
+.pattern {
+    background-image: url('../assets/Frame40.svg');
+    background-size: cover;
+    background-repeat: repeat;
+    background-size: 40%;
+}
+
 .description {
     display: flex;
     width: 100%;
     height: 400px;
-    margin-top: 130px;
+    /* margin-top: 130px; */
 }
 
 .description div {
