--- a/client/components/NPOs/feed.css
+++ b/client/components/NPOs/feed.css
@@ -1,4 +1,4 @@
-/* nav {
+nav {
   display: flex;
   width: 80px;
   height: 80px;
@@ -51,12 +51,12 @@ span {
   justify-content: space-between;
 }
 
-.labels {
+.labels, .accordion-title {
   display: flex;
   width: 960px;
   padding: 32px 40px;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: space-evenly;
+  align-items: start;
   color: rgba(18, 34, 62, 0.5);
   font-family: Outfit;
   font-size: 9px;
@@ -67,24 +67,26 @@ span {
   text-transform: uppercase;
 }
 
-.restaurant {
-  display: flex;
-  width: 960px;
-  padding: 32px 40px;
-  justify-content: space-between;
-  align-items: center;
-  color: #12223e;
-  font-family: Outfit;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  letter-spacing: 0.36px;
+.accordion-title-item, .accordion-content, .labels {
+  flex-basis: 20%;
 }
 
-.restaurant > button {
-  appearance: none;
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-} */
+.accordion-title {
+  color: #12223E;
+font-family: Outfit;
+font-size: 12px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+letter-spacing: 0.36px;
+}
+
+@media screen and (max-width: 700px) {
+  body {
+    font-size: 18px;
+  }
+
+  .accordion {
+    width: 90%;
+  }
+}
