--- a/client/main.css
+++ b/client/main.css
@@ -53,7 +53,7 @@ h4 {
     padding: 12px;
     margin-top: 24px;
     width: 85px;
-    border: none;
+    border: 1px solid #12223E;
     border-radius: 40px;
     background: #FFF;
     color: #12223E;
@@ -159,10 +159,25 @@ nav button {
     margin-bottom: 40px;
 }
 
-.RESTAURANT h2  {
+.RESTAURANT h2 {
     color: #FFF;
 }
 
 .RESTAURANT p {
     color: #FFF;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+}
+
+
+.food-item {
+    margin-top: 36px;
+    padding: 20px;
+    border-radius: 8px;
+    border: 1px solid #EDECE8
 }
