--- a/client/components/Auth/auth.css
+++ b/client/components/Auth/auth.css
@@ -43,7 +43,8 @@ h3 {
 
 .side-bar {
     width: 30%;
-    height: 1100px;
+    min-height: 100vh;
+    height: auto;
     text-align: center;
     padding-top: 200px;
 }
@@ -116,6 +117,8 @@ h3 {
     /* flex-direction: co; */
     justify-content: center;
     width: 70%;
+    height: auto;
+    padding-bottom: 50px;
 }
 
 .hero form {
