--- a/client/components/NPOs/feed.css
+++ b/client/components/NPOs/feed.css
@@ -1,4 +1,4 @@
-nav {
+/* nav {
   display: flex;
   width: 80px;
   height: 80px;
@@ -13,9 +13,9 @@ button {
   width: 24px;
   height: 24px;
   flex-shrink: 0;
-}
+} */
 
-h1 {
+.npo-feed h1 {
   color: #12223e;
   text-align: center;
   font-family: Outfit;
@@ -25,6 +25,13 @@ h1 {
   line-height: normal;
   letter-spacing: 5.76px;
   text-transform: uppercase;
+  margin-left: -200px;
+}
+
+.npo-feed-image {
+  margin-left: -200px;
+  padding: 25px 0 50px 0;
+  border-bottom: 3px red;
 }
 
 span {
@@ -51,15 +58,16 @@ span {
   justify-content: space-between;
 }
 
-.labels, .accordion-title {
+.labels,
+.accordion-title {
   display: flex;
-  width: 960px;
+  width: 1000px;
   padding: 32px 40px;
   justify-content: space-evenly;
   align-items: start;
   color: rgba(18, 34, 62, 0.5);
   font-family: Outfit;
-  font-size: 9px;
+  font-size: 11px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
@@ -67,26 +75,24 @@ span {
   text-transform: uppercase;
 }
 
-.accordion-title-item, .accordion-content, .labels {
+.accordion-title-item,
+.accordion-content,
+.labels {
   flex-basis: 20%;
 }
 
-.accordion-title {
-  color: #12223E;
-font-family: Outfit;
-font-size: 12px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-letter-spacing: 0.36px;
+.accordion-title-item {
+  cursor: pointer;
+  
 }
 
-@media screen and (max-width: 700px) {
-  body {
-    font-size: 18px;
-  }
-
-  .accordion {
-    width: 90%;
-  }
+.accordion-title {
+  color: #12223e;
+  font-family: Outfit;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.36px;
+  
 }
